--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="es" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Invie</title>
+    <style media="screen">
+      body {
+        margin: 0;
+      }
+      img{
+        max-with: 25%;
+        vertical-align: top;
+      }
+    </style>
   </head>
   <body>
-
+    <img src="header.jpg" alt="">
   </body>
 </html>
