--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <body>
     <img src="header.jpg" alt="">
     <img src="hero.webp" alt="">
+    <img src="acustica.webp" alt="">
   </body>
 </html>
