--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <img src="header.jpg" alt="">
     <img src="hero.webp" alt="">
     <img src="acustica.webp" alt="">
+    <img src="clasica.webp" alt="">
   </body>
 </html>
