--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <style media="screen">
       body {
         margin: 0;
+        border: 10px solid #192b36;
       }
-      img{
-        max-with: 25%;
+      img {
+        max-with: 100%;
         vertical-align: top;
+      }
+      img#responsive {
+        display: none;
+      }
+      @@media screen and (max-width: 768px) {
+        img#responsive{
+          display: block;
+        }
+        img{
+          display: none;
+        }
       }
     </style>
   </head>
