--- a/index.html
+++ b/index.html
@@ -6,13 +6,26 @@
         margin: 0;
       }
       img{
-        max-with: 25%;
+        max-width: 100%;
         vertical-align: top;
+      }
+      img#responsive {
+        display: none;
+      }
+      @media screen and (max-width: 768px) {
+        img#responsive {
+          display: block;
+        }
+        img{
+          display: none;
+        }
+      }
+
       }
     </style>
   </head>
   <body>
-    <img src="header.jpg" alt="">
+    <img src="invie-responsive.png" alt="responsive">
     <img src="hero.webp" alt="">
     <img src="acustica.webp" alt="">
     <img src="clasica.webp" alt="">
